# oh-my-skills

./: .gitignore  README.md  README.zh.md  index.html  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml
docs/: CLI-GUI-Design.md
scripts/: sign-and-release.sh
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: MCPPanel.tsx  SkillDetail.tsx  SkillsPanel.tsx
src/types/: index.ts
