[package]
name = "oh-my-skills"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
dirs = "5"
zip = "2"
base64 = "0.22"
chrono = "0.4"
open = "5"

[profile.release]
strip = true
lto = true
codegen-units = 1
